Allerts added on login/register, fixed onkeyup on email

--- a/BoxOfCourses/BoxOfCourses/Views/Account/Login.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Account/Login.cshtml
@@ -84,10 +84,10 @@
     }
 
     .login-gif {
-        border-radius: 5px;
         height: 400px;
         width: 500px;
         border-radius: 50px;
+        border: 5px solid #C126EA;
     }
     #loginForm{
         margin-left: 150px;
@@ -105,7 +105,8 @@
         font-size: 20px;
     }
     .label-remember-me {
-        color: #5ABD64;
+        color: #C126EA;
+        font-size: 16px;
     }
     .login-button{
         color: black!important;
