--- a/BoxOfCourses/BoxOfCourses/Views/Courses/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Courses/Index.cshtml
@@ -363,34 +363,12 @@
 
 @section scripts{
     <script>
-        @*$(document).ready(function () {
-            var table = $("#CoursesTable").DataTable();
-            $("#CoursesTable .js-delete").on("click", function () {
-                var button = $(this);
-                bootbox.confirm("Are you sure you want to delete this course?", function (result) {
-                    if (result) {
-                        $.ajax({
-                            url: "/Courses/Delete/" + button.attr("data-course-id"),
-                            method: "GET",
-                            success: function () {
-                                table.row(button.parents("tr")).remove().draw();
-                            },
-                            error: function (err) {
-                                console.log(err);
-                            }
-                        })
-                    }
-                })
-            })
-
-        });*@
-
-
         var tempTable;
         $(document).ready(function () {
 
             var table = $("#CoursesTable").DataTable();
 
+            //checks the searchtext from clicked icon on homepage, and its all about searching the table directly
             var searchText = window.location.search.substring(1);
             if (searchText === "c") {
                 searchText = searchText + "#";
